--- a/src/Containers/Components/Css/Footer.css
+++ b/src/Containers/Components/Css/Footer.css
@@ -1,19 +1,32 @@
 .footer {
   position: relative;
-  height: 2rem;
-  display: flex;
-  background-image: linear-gradient(to bottom, green, yellow);
   bottom: 0px;
+  height: 5rem;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  background-image: linear-gradient(to bottom, rgb(185, 245, 19), white);
 }
-.brandinfo {
+.brand-info {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Island Moments", cursive;
+  font-weight: 600;
+  font-size: 30px;
 }
-.brandlinks {
+.brand-link {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
+}
+.anishImg {
+  width: 200px;
+}
+.anishImg img {
+  position: absolute;
+  top: -150px;
+  right: 0px;
 }
 
 .clickable {
